@@ -1,3 +1,9 @@
+2010-03-05  Ivan Maidanski <ivmai@mail.ru> (really Burkhard Linke)
+
+	* os_dep.c (GC_get_stack_base): Add LOCK/UNLOCK() (since
+	GC_find_limit_with_bound() should be called with the lock held).
+	* backgraph.c (FOR_EACH_PRED): Fix a typo.
+
 2010-03-05  Ivan Maidanski <ivmai@mail.ru>
 
 	* alloc.c (GC_set_stop_func, GC_get_stop_func): Add
